--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.28.5",
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "replicate": "^0.16.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
@@ -20,6 +22,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "drizzle-kit": "^0.19.13",
+    "encoding": "^0.1.13",
+    "supabase": "^1.88.0"
   }
 }
