--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.5",
+    "lucide-react": "^0.274.0",
     "next": "latest",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "replicate": "^0.16.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3"
   },
   "devDependencies": {
