--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@uppy/core": "^3.5.0",
+    "@uppy/dashboard": "^3.5.2",
+    "@uppy/react": "^3.1.3",
+    "@uppy/xhr-upload": "^3.4.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
