--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "latest",
-    "@supabase/supabase-js": "latest",
     "@uppy/core": "^3.5.0",
     "@uppy/dashboard": "^3.5.2",
     "@uppy/react": "^3.1.3",
@@ -39,7 +37,6 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "drizzle-kit": "^0.19.13",
-    "encoding": "^0.1.13",
-    "supabase": "^1.88.0"
+    "encoding": "^0.1.13"
   }
 }
