--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "drizzle-orm": "^0.28.5",
     "lucide-react": "^0.274.0",
     "next": "latest",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
