--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "sst bind next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -38,6 +38,9 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "drizzle-kit": "^0.19.13",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "sst": "^2.25.4",
+    "aws-cdk-lib": "2.95.1",
+    "constructs": "10.2.69"
   }
 }
