--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "sst bind next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -34,13 +35,17 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vitejs/plugin-react": "^4.0.4",
+    "aws-cdk-lib": "2.95.1",
+    "constructs": "10.2.69",
     "drizzle-kit": "^0.19.13",
     "encoding": "^0.1.13",
+    "jsdom": "^22.1.0",
     "sst": "^2.25.4",
-    "aws-cdk-lib": "2.95.1",
-    "constructs": "10.2.69"
+    "vitest": "^0.34.4"
   }
 }
