--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
