--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.38.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/node": "20.3.1",
@@ -47,6 +48,6 @@
     "encoding": "^0.1.13",
     "jsdom": "^22.1.0",
     "sst": "^2.25.4",
-    "vitest": "^0.34.4"
+    "vitest": "^0.34.5"
   }
 }
